# BugDoc

./: .bandit  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  STANDALONE_IMPLEMENTATION.md  STANDALONE_MODE.md  conftest.py  index.md  pyproject.toml  pytest.ini  readthedocs.yml
.github/workflows/: coverage.yml  docs.yml  lint.yml  security.yml  tests.yml
bugdoc_api/: setup.py
bugdoc_api/bugdoc/algos/: base.py  debugging_decision_trees.py  minimal_pairs.py  opportunistic_group_testing.py  shortcut.py  stacked_shortcut.py  stacked_shortcut_standalone.py
bugdoc_api/bugdoc/utils/: combinatorial_design.py  quine_mccluskey.py  selective_instrumentation.py  tree.py  utils.py
bugdoc_cli/: README.md  bugdoc_cli_worker.py  main.py  setup.py
docs/: api.rst  client.rst  conf.py  definitions.rst  getting-started.nblink  index.rst  installation.rst  requirements_docs.txt
examples/: API_Interface.ipynb  Debugger.ipynb  Integration.ipynb  README.rst  api_interface.py  conf_my_api_example.json  dataflow_pipeline.json  debugger.py  my_api_example.py  standalone_example.py
sigmod20/: completeExperiments.sh  figures.py  figures_ogt.py  figures_selective.py  prepareSoftware.sh  rerunExplanationTables.sh  runExperiments.sh  testExplanations.sh
sigmod20/experiments/: db.conf  experiment.py  experiment_explanation_tables.py  experiment_fig_4.py  experiment_fig_5.py  experiment_fig_6.py  experiment_ogt.py  experiment_selective.py
sigmod20/experiments/count_instances/: experiment_setup.py
sigmod20/experiments/find_all/: experiment_setup.py
sigmod20/experiments/find_all_shortcut/: experiment_setup.py
sigmod20/experiments/find_all_stacked/: experiment_setup.py
sigmod20/experiments/find_one/: experiment_setup.py
sigmod20/experiments/find_one_shortcut/: experiment_setup.py
sigmod20/experiments/find_one_stacked/: experiment_setup.py
sigmod20/experiments/ogt_outliers/: experiment_setup.py
sigmod20/experiments/parallel_evaluation/: experiment_setup.py
sigmod20/experiments/selective_evaluation_conj/: experiment_setup.py
sigmod20/experiments/selective_evaluation_dis/: experiment_setup.py
sigmod20/experiments/selective_evaluation_ineq_conj/: experiment_setup.py
sigmod20/experiments/selective_evaluation_ineq_dis/: experiment_setup.py
sigmod20/experiments/selective_evaluation_ineq_dis_parameters/: experiment_setup.py
sigmod20/experiments/world/data/: world_9223372036854775807.agg
sigmod20/scripts/: explain_LL.py  formulas.py  generate_experiments.py  helpers.py  plots.py  read_answer_sizes.py  read_ogt_results.py  read_results.py  run_data_xray.py  run_explanation_tables.py  run_ogt.py  run_outlier.py  run_qm.py  run_selective.py  run_shortcut.py  run_smac.py  run_stacked_shortcut.py  run_trees.py  synthetic_pipeline.py  test_explanations_db.py
test/: budget_test.py  comninatorial_design_test.py  python_worker.py  python_worker_ogt.py  python_worker_test.py  runs_test.py  test_diagnosis.vt  test_standalone.py
